policies/standard/pod_security_procmount/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8spodsecurityprocmountpolicy
  annotations:
    description: >-
      The /proc mount type mask should be enabled
spec:
  crd:
    spec:
      names:
        kind: K8sPodSecurityProcmountPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8spodsecurityprocmountpolicy

        violation[{"msg": msg}] {
          c := input_containers[_]
          not input_mounttype(c)
          msg := sprintf("Proc Mount type mask should be enabled: %v", [c.name])
        }

        input_mounttype(c) {
          lower(c.securityContext.procMount) == "default"
        }

        input_containers[c] {
            c := input.review.object.spec.containers[_]
        }
        input_containers[c] {
            c := input.review.object.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind != "Pod"
            input.review.object.kind != "CronJob"
            c := input.review.object.spec.template.spec.initContainers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.containers[_]
        }
        input_containers[c] {
            input.review.object.kind == "CronJob"
            c := input.review.object.spec.jobTemplate.spec.template.spec.initContainers[_]
        }
